skaha-k8s-config/k9s-dev/arcade/ingress/skaha-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skaha-ingress
  namespace: skaha-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /skaha/$2
spec:
  rules:
  - host: keel-dev-ingress.cloud.computecanada.ca
    http:
      paths:
      - path: /skaha(/|$)(.*)
        backend:
          serviceName: skaha-tomcat-svc
          servicePort: 8080
